<resources>
    <string name="app_name">HelloWash - Premium Laundry &amp; DryClean Services</string>
    <string name="email_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Login</string>
    <string name="facebook_app_id">206699313283890</string>
    <string name="fb_login_protocol_scheme">fb206699313283890</string>
    <string name="ask_name_text">Hey, \n\nWe are glad to have you signed up. How should we call you?</string>
    <string name="dont_have_ac">Don\'t have an account :</string>
    <string name="signup"><u>SIGNUP</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_email_hint">Or login with Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="ask_age_text">We want to know how sweet you are.</string>
    <string name="ask_address_text">Where should we meet you?</string>
    <string name="city">City</string>
    <string name="profile_hint">Profile</string>
    <string name="address">Address</string>
    <string name="land_mark">Landmark</string>
    <string name="next">NEXT</string>
    <string name="title">HelloWash</string>
    <string name="menu_credit_points">CREDIT POINTS</string>
    <string name="menu_my_order">MY ORDER</string>
    <string name="menu_serviceable_areas">SERVICEABLE AREAS</string>
    <string name="menu_refer"><![CDATA[REFER & EARN]]></string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_support">SUPPORT</string>
    <string name="menu_rate_us_now">RATE US NOW</string>
    <string name="logout">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="allmost_done">We are almost done. How frequently you look for laundry service?</string>
    <string name="how_frequently">How frequently?</string>
    <string name="submit">SUBMIT</string>
    <string name="book_your_laundry">Book your Laundry</string>
    <string name="wash_n_fold"><![CDATA[WASH & FOLD]]></string>
    <string name="wash_n_iron"><![CDATA[WASH & IRON]]></string>
    <string name="stean_iron">STEAM IRON</string>
    <string name="dry_clean">Dry Clean</string>
    <string name="dying">DYING</string>
    <string name="personal_detail">PERSONAL DETAILS</string>
    <string name="mobile">Mobile</string>
    <string name="address_detail">ADDRESS DETAILS</string>
    <string name="pincode">Pincode</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="hellowash">HelloWash</string>
    <string name="select">Select</string>
    <string name="customer_name">Customer Name</string>
    <string name="order_status">Order Status</string>
    <string name="wash_type">Wash Type</string>
    <string name="total_clothes">Total Clothes</string>
    <string name="total_kgs">Total Kgs</string>
    <string name="wash_by">Wash By</string>
    <string name="total_cost">Total Cost</string>
    <string name="extra_services">Extra Services</string>
    <string name="pickedup_time">Pickedup Time</string>
    <string name="services">Services</string>
    <string name="no_order_hint">Sorry! Look like you do not\n have any orders</string>
    <string name="place_order">PLACE ORDER NOW</string>
    <string name="mail_us">MAIL US</string>
    <string name="call_us">CALL US</string>
    <string name="support_number">9394784876</string>
    <string name="support_email">support@hellowash.co.in</string>
    <string name="faq_1">What does Hello Wash do?</string>
    <string name="faq_2">How do i schedule my wash?</string>
    <string name="faq_3">Is Hello Was not available in your Area?</string>
    <string name="faq_4">What is the turnaround time of my wash?</string>
    <string name="faq_5">What if my clothes are damaged/lost?</string>
    <string name="faq_6">Minimum Orde?</string>
    <string name="faq_7">What is the concept of Kg basis and piece wise basis?</string>
    <string name="faq_8">Rellay loved the Covers? Do I get to keep them?</string>
    <string name="faq_9">Payment Modes?</string>
    <string name="faq_10">What if I\'m not available for delivery?</string>
    <string name="faq_11">I have book my request, but cannot see my order status in track order or profile?</string>
    <string name="faq_12">How to avail discounts?</string>
    <string name="faq_13">For any order related queries:</string>
    <string name="faq_14">Your representative is requesting an OTP while delivery? why is that?</string>
    <string name="faq_15">Do I have to give in sepaarate bags for dry clean and normal wash?</string>
    <string name="faq_16">When do we work?</string>
    <string name="faq_17">What if my clothes are heavily stained?</string>
    <string name="faq_hint">Get in touch if you\'re…</string>
    <string name="faq_title">FAQs</string>
    <string name="faq1_ans">‘Hello Wash’ is the new boy in town. For all your laundry requirements right from washing, drying, folding and packing to dry cleaning, our ‘Hello Wash’ magic works like wonder. It could save you a bundle of hours which you can spend with your loved ones.</string>
    <string name="faq2_ans"><body><p>Scheduling a wash with ‘Hello wash’ is as simple as saying Hello.\n\nGo to Book now, Login, Enter your details, Choose your pickup slot and submit. Now relax on your couch. Our pickup boy will be available at your doorsteps at YOUR TIME.\n\nWant more clear understanding? Let’s solve together this time :P\n\nChoose your wash type i.e., if you want to book a General wash or book a Plan.\n\nGeneral Wash:\n\nIt’s a one time request for your wash. This is feasible if you have limited number of clothes.\n\nPlan Wash:\n\nIt can be a one time request or multiple one based on the plan you select.\n\nFeasible if you have many clothes to wash at a time or want a fixed pickup in a month or more.\n\nChoose your landmark and enter your address that is simple and clear. (For us to make your pickup easy).\n\nSee if your address is in our working areas. Then, you can Proceed with your booking.</p></body></string>
    <string name="faq3_ans">Don’t Worry, Hello Wash is coming! However we are ramping our fleet at faster pace to cover majority of areas in city as our aim is to make entire city HELLO WASHED!</string>
    <string name="faq4_ans">You might get surprised with our super fast wash cycle. We Just take 60hrs of time to deliver your clothes from the picked up time for a Normal Wash. When we say in 60hrs. We abide by that.</string>
    <string name="faq5_ans">The chances are very less and if happened, we apologise for any inconvenience caused with/without our consent. Just give us a call within 24 hours along with your order id. We will make sure you get back your garment or the compensation.</string>
    <string name="faq6_ans">We take a minimum order of Rs.350. All orders below the minimum order slot will be charged extra 50rs to manage our delivery costs. For Steam Iron only service minimum of 50rs will be charged irrespective of order size.</string>
    <string name="faq7_ans"><body><p>It’s simple. The current market charges customers either by based on piecewise/ by Kilo wise.\n\nWe understand the customer and hence gave the customer the option of selecting his wash based on Kg/piece wise.\n\nThere is a logic behind doing this.\nSometimes the Kg concept will benefit the customer in terms of cost and sometimes the other does. Hence we gave this option to customers to choose their wash according to their wish as it maintains transparency.</p></body></string>
    <string name="faq8_ans">Firstly thank you for developing lots of love on us. To complement your love, The Cover is given to you. You can use it for your next order as well.</string>
    <string name="faq9_ans">We are happy to accept direct cash. We also accept payments through PAYTM. Please scan our QR code for faster payment(Our Agents will guide you for the same). We advise you to keep the change so that our agent work is done smoothly. We charge you at the cost promised you while picking up. We are not expecting any other online payment mode to avoid complexity as of now.</string>
    <string name="faq10_ans"><body><p>We would love if you can try and be available during the delivery as we relish your smile during our delivery :)\nIn other cases of unavailability,\nNo issues. Our delivery agent/representative will give you a call before leaving for your delivery. Please confirm him your availability then. If you\'re not available, your clothes will be at our hub for one complete day after the prescribed delivery date.\nFeel free to provide an alternate time of delivery. We can also deliver to your helper, neighbour but would need an email stating the same from the registered email ID.\nHello Wash may not be able to promise the clothes later as you know we would be dealing with huge number of clothes at a time.There might be chances of misplacement.</p></body></string>
    <string name="faq11_ans"><body><p>Do not worry. Please keep your request ID ready for our rep. Once the pickup takes place, You can track your Id based on HW id.\nIf you cannot find your request id in track order, It’s simple, Your order is not yet picked up.</p></body></string>
    <string name="faq12_ans"><body><p>All available offers/discounts will be made be shown/represented in our website.\nIf you cannot always track discounts/offers, don’t worry.\nOur representative will guide you with the current best offers we are running.\nWe always strive you to give at best price.</p></body></string>
    <string name="faq13_ans">Please contact support@hellowash.co.in</string>
    <string name="faq14_ans"><body><p>Yes.,\n\nPlease provide the OTP received in your mobile during the delivery if and only if you feel all clothes are available and delivered. After the OTP is confirmed, we take as a confirmation that your order has been successfully delivered.\nThis is how we ensure that your clothes are delivered with your own consent.\nIf OTP is not generating, dont worry, Our representative will guide you on the same.</p></body></string>
    <string name="faq15_ans"><body><p>Relax.\nOur representative will help you while your pickup.</p></body></string>
    <string name="faq16_ans"><body><p>We try to take pickup all days except public holidays.\n\nOur pickup timings will be available from 9AM to 7PM. We might take up urgent pickups based on the level of urgencies at our availability.</p></body></string>
    <string name="faq17_ans">We try our best to remove the stains by adapting the best washing cycle, detergent, temperature suitable for the garment, however in case of tough stains, we would recommend you to use dry cleaning service.</string>
    <string name="track_order">Track Order</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city_name">City</string>
    <string name="mobile_hint">Mobile</string>
    <string name="signup_hint">SignUp</string>
    <string name="already_member">Already a member?</string>
    <string name="login"><u>Login</u></string>
    <string name="top">Top</string>
    <string name="shirt">Shirt</string>
    <string name="t_shirt">T Shirt</string>
    <string name="bath_robe">Bath Robe</string>
    <string name="sweat_shirt">Sweat Shirt/Sweaters</string>
    <string name="jecket">Jacket</string>
    <string name="coat_cap">Coat with Cap</string>
    <string name="bottom">Bottom</string>
    <string name="trousers_cargos">Trousers/Cargos</string>
    <string name="jeans">Jeans</string>
    <string name="lungi_dhoti">Lungi/Dhoti</string>
    <string name="shorts_boxers">Shorts/Boxers</string>
    <string name="tracks">Tracks</string>
    <string name="suit">Suit</string>
    <string name="ethic">Ethic</string>
</resources>