<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/water_blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <RelativeLayout
                    android:id="@+id/user_profile_lyt"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_shape">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_profile"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="0.5dp"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/edit_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/user_profile_lyt"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="-10dp"
                    android:layout_toRightOf="@+id/user_profile_lyt"
                    android:background="@drawable/circle_shape_red"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_camera"
                        tools:ignore="VectorDrawableCompat" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/personal_detail"
                android:textColor="@color/color_gray" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/mobile_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:hint="@string/mobile"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/address_detail"
                android:textColor="@color/color_gray" />

            <EditText
                android:id="@+id/address_edittext"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:gravity="top"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/landmark_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:hint="@string/land_mark"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="5dp" />

            <EditText
                android:id="@+id/pincode_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/profile_edittext_bg"
                android:elevation="1dp"
                android:ems="12"
                android:hint="@string/pincode"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="5dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/address_selected_bg"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/home"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/address_normal_bg"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/work"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/address_normal_bg"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/other"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>