<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />

            </LinearLayout>


        </android.support.v7.widget.Toolbar>


        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabIndicatorHeight="3dp"
            app:tabMinWidth="150dp"
            app:tabMode="scrollable" />


    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:weightSum="2"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_laundry_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:drawableRight="@drawable/ic_right_arrow_whire"
                android:drawablePadding="10dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="end"
                android:textColor="@color/color_white"
                android:text="@string/book_your_laundry" />

        </LinearLayout>
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="5dp"
        android:elevation="5dp"
        fab:fab_addButtonColorNormal="@color/colorPrimary"
        fab:fab_addButtonColorPressed="@color/colorPrimary"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/wash_n_fold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_shirt"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_title="@string/wash_n_fold" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/wash_n_iron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_iron"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_title="@string/wash_n_iron" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/steam_iron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_iron_steam"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_title="@string/stean_iron" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/dry_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_dry_clean_new"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_title="@string/dry_clean" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/dying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_dying"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_title="@string/dying" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</RelativeLayout>
